--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <htm>
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="estilo/estilo.css">
 
     </head>
